app/assets/stylesheets/wiki.css
.inline-edit-btns {
  margin-left: 5px;
  font-size: 14px;
  display: block;
  font-size: 14px;
  opacity: 0;
  /* text-align: center; */
  margin-top: 0;
  margin-left: 0;
  padding-bottom: 10px;
  color: #aaa;
}
.inline-section:hover .inline-edit-btns {
  opacity: 1;
}
.inline-edit-btns .fa {
  color: #888;
  border-radius: 18px;
  background: #efefef;
  padding: 8px;
  margin-right: 4px;
}
.inline-edit-btns .fa:hover {
  color: #666;
  background: #dedede;
}

.inline-edit-form .wk-wysiwyg {
  background: white;
}
.inline-edit-form .controls {
  padding-top: 4px;
  clear: both;
}

.pl-content .inline-section h1,
.pl-content .inline-section h2,
.pl-content .inline-section h3 {
  padding-top: 0;
}

.wk-container textarea {
  margin-bottom: 4px;
}

.tooltip-inner { 
  max-width: 500px 
}

@media (min-width: 768px) {
  .inline-edit-btns {
    font-size: 11px;
  }
  .inline-edit-btns .fa {
    color: #888;
    border-radius: 18px;
    background: #efefef;
    padding: 6px;
    margin-right: 4px;
   }
}

@media (max-width: 768px) {
  .inline-edit-btns {
    opacity: 1;
  }
}

a.navbar-offset {
    display: block;
    position: relative;
    top: -100px;
    visibility: hidden;
}

#toc-menu:hover, .toc-active {
  background-color: #cbd5e0;
}

.js-toc {
  max-height: 339px;
  max-width: 298px;
  top: 40px;
  overflow: auto;
  line-height: 2;
  border: 1px solid #e1e4e8;
  z-index: 1000;
}

.js-toc > .toc-list {
  margin-top: 20px;
}

.toc-list {
  list-style: none;
  background-color: #fff;
  z-index: 2000;
  margin-bottom: 0;
  padding: 0px 15px 15px 15px;
}

.is-collapsible {
  padding-left: 20px;
  padding-bottom: 5px;
  list-style: none;
}

.toc-list-item {
  padding: 0;
  font-weight: initial;
  text-align: start;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.toc-list-item a {
  color: #343a40;
  text-decoration: none;
}

.toc-list-item a:hover {
  color: #0c82c4;
}

details > summary {
  list-style: none;
}

details > summary::-webkit-details-marker {
  display: none;
}

@media (max-width: 606px) {
  .js-toc {
    max-width: 260px;
  }
}

@media (max-width: 768px) {
  .add-subscriptions {
    margin-top:10px;
  }
}

.wk-wysiwyg {
  background: white;
}

